Add normalize and basic html

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,22 @@
     <title>Activity Tracker</title>
   </head>
   <body>
-    <h1>Activity Tracker</h1>
-
+    <nav>
+      <h1>Activity Tracker</h1>
+    </nav>
+    <header>
+      <h2>Welcome, <span>Name</span></h2>
+      <h4>Address</h4>
+      <h4>Email</h4>
+      <h4>Daily Step Goal</h4>
+      <h4>Friends</h4>
+    </header>
+    <main>
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+    </main>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
