Add basic css styling

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Activity Tracker</title>
   </head>
   <body>
@@ -15,12 +16,12 @@
       <h4>Daily Step Goal</h4>
       <h4>Friends</h4>
     </header>
-    <main>
+    <output>
       <div>1</div>
       <div>2</div>
       <div>3</div>
       <div>4</div>
-    </main>
-    <script type="text/javascript" src="./scripts.js"></script>
+    </output>
   </body>
+  <script type="text/javascript" src="./scripts.js"></script>
 </html>
