Console log a random user

--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,9 @@
       <div>4</div>
     </output>
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="../data/users.js"></script>
+  <script type="text/javascript" src="./User.js"></script>
+  <script type="text/javascript" src="./UserRepository.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
 </html>
