--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
       <h1>Activity Tracker</h1>
     </nav>
     <header>
-      <h2>Welcome, <span>Name</span></h2>
-      <h4>Address</h4>
-      <h4>Email</h4>
-      <h4>Daily Step Goal</h4>
-      <h4>Friends</h4>
+      <h2>Welcome, <span id="header__h2--name">Name</span></h2>
+      <h4>Address: <span id="header--address">Name</span></h4>
+      <h4>Email: <span id="header--email">Name</span></h4>
+      <h4>Daily Step Goal: <span id="header--step-goal">Name</span></h4>
+      <h4>Friends: <span id="header--friends">Name</span></h4>
     </header>
     <output>
       <div>1</div>
@@ -23,5 +23,9 @@
       <div>4</div>
     </output>
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="../data/users.js"></script>
+  <script type="text/javascript" src="./User.js"></script>
+  <script type="text/javascript" src="./UserRepository.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
 </html>
