--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,17 @@
       <h4>Friends: <span id="header--friends">Name</span></h4>
     </header>
     <output>
-      <div>1</div>
+      <div><canvas id="myChart" width="400" height="400"></canvas></div>
       <div>2</div>
       <div>3</div>
       <div>4</div>
     </output>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="../data/users.js"></script>
   <script type="text/javascript" src="./User.js"></script>
   <script type="text/javascript" src="./UserRepository.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
+  <script type="text/javascript" src="./dataCharts.js"></script>
 </html>
