--- a/src/index.html
+++ b/src/index.html
@@ -3,31 +3,51 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
     <title>Activity Tracker</title>
   </head>
   <body>
     <nav>
-      <h1>Activity Tracker</h1>
+      <article class="nav__article">
+        <h1>Activity<span class="nav__h1">Tracker</span></h1>
+        <img class="nav__img" src="../images/runner.svg" alt="really fast stick-person">
+      </article>
+      <h2 class="header__h2">Welcome, <span id="header__h2--name"></span></h2>
     </nav>
     <header>
-      <h2>Welcome, <span id="header__h2--name">Name</span></h2>
-      <h4>Address: <span id="header--address">Name</span></h4>
-      <h4>Email: <span id="header--email">Name</span></h4>
-      <h4>Daily Step Goal: <span id="header--step-goal">Name</span></h4>
-      <h4>Friends: <span id="header--friends">Name</span></h4>
+      <ul class="header__ul">
+        <li>Address: <br >
+          <span class="header__li" id="header--address"></span></li>
+        <li>Email: <br >
+          <span class="header__li" id="header--email"></span></li>
+        <li>Friends: <br >
+          <span class="header__li" id="header--friends"></span></h4></li>
+      </ul>
+      <h3>Daily Step Goal: <br >
+        <span class="header__h3" id="header--step-goal"></span></h3>
+        <!-- <canvas id="dailyStepGoal" width="400" height="400"></canvas> -->
     </header>
     <output>
-      <div><canvas id="myChart" width="400" height="400"></canvas></div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
+      <section class="output__section"><canvas id="hydrationChart" width="400" height="400"></canvas></section>
+      <section>2</section>
+      <section>3</section>
+      <section>4</section>
     </output>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="../data/activity.js"></script>
+  <script type="text/javascript" src="../data/sleep.js"></script>
   <script type="text/javascript" src="../data/users.js"></script>
+  <script type="text/javascript" src="../data/hydration.js"></script>
   <script type="text/javascript" src="./User.js"></script>
   <script type="text/javascript" src="./UserRepository.js"></script>
+  <script type="text/javascript" src="./Hydration.js"></script>
+  <script type="text/javascript" src="./HydrationRepository.js"></script>
+  <script type="text/javascript" src="./Sleep.js"></script>
+  <script type="text/javascript" src="./SleepRepository.js"></script>
+  <script type="text/javascript" src="./Activity.js"></script>
+  <script type="text/javascript" src="./ActivityRepository.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <script type="text/javascript" src="./dataCharts.js"></script>
 </html>
