Add step goal graph and updated colors in CSS

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,13 @@
           <span class="header__li" id="header--friends"></span></h4></li>
       </ul>
       <h3>Daily Step Goal: <br >
-        <span class="header__h3" id="header--step-goal"></span></h3>
-        <!-- <canvas id="dailyStepGoal" width="400" height="400"></canvas> -->
+        <canvas id="dailyStepGoal" width="300" height="300"></canvas>
     </header>
     <output>
-      <section class="output__section"><canvas id="hydrationChart" width="400" height="400"></canvas></section>
+      <h4>Hydration</h4>
+      <section class="section--hydration">
+        <canvas class="canvas--hydration" id="hydrationChart" width="400" height="400"></canvas>
+      </section>
       <section>2</section>
       <section>3</section>
       <section>4</section>
