Finish activity table on DOM

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
       <section class="section--hydration">
         <canvas class="canvas--hydration" id="hydrationChart" width="400" height="400"></canvas>
       </section>
-      <section>2</section>
+      <h4>Activity</h4>
+      <section class="section--activity" id="section--activity">
+        <canvas class="canvas--activity" id="activityChart" width="400" height="400"></canvas>
+      </section>
       <section>3</section>
       <section>4</section>
     </output>
