--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       </section>
       <h4>Activity</h4>
       <section class="section--activity" id="section--activity">
-        <canvas class="canvas--activity" id="activityChart" width="400px" height="400px"></canvas>
+        <canvas class="canvas--activity" id="activityChart" width="400" height="400"></canvas>
       </section>
       <section>3</section>
       <section>4</section>
