--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       </ul>
       <h3>Daily Step Goal: <br >
         <canvas id="dailyStepGoal" width="300" height="250"></canvas>
+        <h5 id="stepGoalResult"></h5>
     </header>
     <output>
       <article class="article--column1">
@@ -33,8 +34,8 @@
           <canvas class="canvas--hydration" id="hydrationChart" width="400" height="200"></canvas>
         </section>
         <h4>Activity</h4>
-        <section class="section--activity--table" id="section--activity--table">
-        </section>
+        <!-- <section class="section--activity--table" id="section--activity--table">
+        </section> -->
         <section class="section--activity--charts">
           <canvas class="canvas--steps" id="canvas--steps" width="400" height="200"></canvas>
           <canvas class="canvas--stairs" id="canvas--stairs" width="400" height="200"></canvas>
@@ -44,7 +45,7 @@
       <article class="article--column2">
         <h4>Sleep</h4>
         <section class="section--sleep">
-          <canvas class="canvas--sleep" id="sleepChartChart" width="400" height="400"></canvas>
+          <!-- <canvas class="canvas--sleep" id="sleepChartChart" width="400" height="400"></canvas> -->
         </section>
       </article>
     </output>
