Finish chart for step challenge

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,11 @@
         <section class="section--sleep">
           <!-- <canvas class="canvas--sleep" id="sleepChartChart" width="400" height="400"></canvas> -->
         </section>
+        <h4>Step Challenge</h4>
+        <section class="section--step-challenge">
+          <canvas class="canvas--step-challenge" id="canvas--step-challenge" width="400" height="200">
+          </canvas>
+        </section>
       </article>
     </output>
   </body>
