Finish dashboard charts

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,6 @@
           <canvas class="canvas--hydration" id="hydrationChart" width="400" height="200"></canvas>
         </section>
         <h4>Activity</h4>
-        <!-- <section class="section--activity--table" id="section--activity--table">
-        </section> -->
         <section class="section--activity--charts">
           <canvas class="canvas--steps" id="canvas--steps" width="400" height="200"></canvas>
           <canvas class="canvas--stairs" id="canvas--stairs" width="400" height="200"></canvas>
@@ -43,7 +41,9 @@
       <article class="article--column2">
         <h4>Sleep</h4>
         <section class="section--sleep">
-          <!-- <canvas class="canvas--sleep" id="sleepChartChart" width="400" height="400"></canvas> -->
+          <canvas class="canvas--sleep" id="sleepChartDate" width="400" height="200"></canvas>
+          <canvas class="canvas--sleep" id="sleepChartHoursWeek" width="400" height="200"></canvas>
+          <canvas class="canvas--sleep" id="allTimeAvg" width="400" height="200"></canvas>
         </section>
         <h4>Step Challenge Results!</h4>
         <section class="section--step-challenge">
