--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
           <span class="header__li" id="header--email"></span></li>
       </ul>
       <h3>Daily Step Goal: <br >
-        <canvas id="dailyStepGoal" width="300" height="250"></canvas>
+        <section class="header__section--chart">
+          <canvas id="dailyStepGoal" width="300" height="250"></canvas>
+        </section>
         <h5 id="stepGoalResult"></h5>
     </header>
     <output>
