Add final touches to CSS, and uncomment code

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Activity Tracker</title>
   </head>
   <body>
@@ -55,6 +56,7 @@
       </article>
     </output>
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="../data/activity.js"></script>
   <script type="text/javascript" src="../data/sleep.js"></script>
   <script type="text/javascript" src="../data/users.js"></script>
@@ -68,7 +70,6 @@
   <script type="text/javascript" src="./Activity.js"></script>
   <script type="text/javascript" src="./ActivityRepository.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="./scripts.js"></script>
   <script type="text/javascript" src="./dataCharts.js"></script>
 </html>
